--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,13 @@
     transform: rotate(360deg);
   }
 }
+
+.parti
+{
+  position:fixed;
+  top:0;
+  bottom:0;
+  left:0;
+  right:0;
+  z-index: -1;
+}
